# Codefresh-GHA

./: README.md  pyproject.toml
src/cf2gha/: cli.py  emitter.py  models.py  parser.py  service.py  translator.py  web.py
src/cf2gha/static/: app.css  app.js
src/cf2gha/templates/: index.html
tests/: test_cli.py  test_translator.py
