[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codefresh-to-github-actions"
version = "0.1.0"
description = "Convert basic Codefresh pipelines to GitHub Actions workflows"
readme = "README.md"
authors = [{name = "OpenClaw"}]
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cf2gha = "cf2gha.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
